# bc-mle-tech-assignment

./: .gitignore  README.md  requirements.txt
churn-model/: main.py  pyproject.toml
docs/: section_3_production-comments.md
models/: xgboost_churn_model.joblib
notebooks/: BC_Data_Challenge.ipynb
src/: README.md  pyproject.toml  xgboost_churn_predictor.py
