[project]
name = "churn-model"
version = "0.1.0"
description = "Made for a BC MLE tech assessment, this package provides a churn prediction model using survival analysis techniques."
author = "Jonathan Deiloff <jdeiloff@gmail.com>"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ecos>=2.0.14",
    "joblib>=1.5.1",
    "lifelines>=0.30.0",
    "nbformat>=5.10.4",
    "numexpr>=2.11.0",
    "openpyxl>=3.1.5",
    "osqp>=1.0.4",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-survival==0.24.0",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
